Tue Feb 25 23:10 1998  Arturo Espinosa  <arturo@nuclecu.unam.mx>

	* gnomine.c (main): now minefield is always centered.

Tue Feb 25 23:10 1998  Arturo Espinosa  <arturo@nuclecu.unam.mx>

	* gnomine.c (main): using gnome_pixmap_new_from_xpm_d instead of
	                    gnome_create_pixmap_widget_d

Tue Feb 17 21:50:19 1998  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnomine.c (main): Remove spurious call to gtk_init

1998-02-19  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnomine.c (main): Added app_id "gnomine".

1998-02-16  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* minefield.c: Modified the GtkMineField widget to use a
	GdkColorContext for color allocation instead of the old (broken!
	stupid! brain-dead!) gnome-colors stuff :-)

Donnie Barnes <djb@redhat.com>:

	* Added resizing of squares

Mon Feb 16 19:58:06 KST 1998  Changwoo Ryu  <cwryu@adam.kaist.ac.kr>

	* Makefile.am (INCLUDES): Define GNOMELOCALEDIR.

	* gnomine.c (main): Added bindtextdomain().

1998-02-14  Carsten Schaar  <nhadcasc@fs-maphy.uni-hannover.de>

	* gnomine.c (save_state): Changed to use new SM support.
	(parse_args): Changed to use new SM support

Sat Feb 14 09:27:05 1998  Tom Tromey  <tromey@cygnus.com>

	* Makefile.am (gnomine_LDADD): Added INTLLIBS.
	(Games_DATA): New macro.
	(install-data-local): Don't install gnomine.desktop.

1998-02-07  Raja R Harinath  <harinath@cs.umn.edu>

	* Makefile.am (install-data-local): Install game `setgid' only if
	chown to `games' succeeded.

Mon Feb  2 23:50:12 EST 1998 Nathan Bryant <bryant@cs.usm.maine.edu>

	* Makefile.am: install gnomine setgid games.

Mon Feb  2 22:08:05 EST 1998 Nathan Bryant <bryant@cs.usm.maine.edu>

	* gnomine.c: added gnome_score_init

Fri Jan 30 13:26:55 1998  Tom Tromey  <tromey@cygnus.com>

	* programs/gnomine/gnomine.c (about): Don't return a value.

1998-01-28  Raja R Harinath  <harinath@cs.umn.edu>

	* Makefile.am: Misc. fixes.
