@@ -1,3 +1,7 @@
+1998-02-26 Arturo Espinosa  <arturo@nuclecu.unam.mx>
+
+	* gnomine.c (main): Help is right-justified.
+
 Tue Feb 25 23:10 1998  Arturo Espinosa  <arturo@nuclecu.unam.mx>
 
 	* gnomine.c (main): now minefield is always centered.
